--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,7 @@ web-view = { version = "0.7"}
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 home = "0.5.3"
-reqwest = "0.11.3"
-tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11.3", features = ["blocking"] }
 webbrowser = "0.5.5"
 
 [profile.release]
