Improve crate documentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "cms_notifs"
 version = "0.1.0"
 authors = ["Divyanshu Agrawal <agrawal.divyanshu@outlook.com>"]
 edition = "2018"
-description = "Read your latest unread notifications from Moodle"
+description = "Read your latest unread notifications from the Moodle CMS"
 homepage = "https://github.com/agrawal-d/moodle-cms-notifs/"
 repository = "https://github.com/agrawal-d/moodle-cms-notifs/"
 license = "GPL-3.0-or-later"
