--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ serde_json = "1.0.64"
 home = "0.5.3"
 reqwest = { version = "0.11.3", features = ["blocking"] }
 webbrowser = "0.5.5"
+simplelog = "0.10.0"
+log = "0.4.14"
 
 [profile.release]
 lto = true
