--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["moodle", "cms", "gui"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-web-view = { version = "0.7"}
+web-view = { version = "0.7", features = ["edge"] }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 home = "0.5.3"
