--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ reqwest = { version = "0.11.3", features = ["blocking"] }
 webbrowser = "0.5.5"
 simplelog = "0.10.0"
 log = "0.4.14"
+lazy_static = "1.4.0"
 
 [profile.release]
 lto = true
